antonio_sanchez/session01/exercise01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment-mariadb
  namespace: exercise01
  labels:
    app: wordpress
    type: database
    tier: backend
spec:
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: database
        tier: backend
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
          - containerPort: 3306
            name: db-port
