antonio_sanchez/session01/exercise01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise01
  labels:
    app: wordpress
    type: web
    tier: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: web
        tier: frontend
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:latest
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
