antonio_sanchez/session01/exercise01/mariadb-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: service-mariadb
  namespace: exercise01
  labels:
    app: wordpress
    type: database
    tier: backend
spec:
  selector:
    app: wordpress
    type: database
    tier: backend
  ports:
  - port: 3306
    targetPort: db-port
  type: ClusterIP
